--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
       <div class="controls">
         <label class="visually-hidden" for="langSelect" data-i18n="lang_label" style="position:absolute;left:-9999px;">Language</label>
         <select id="langSelect" class="lang-select" aria-label="Language" title="Language">
-          <option value="en">🌐 EN</option>
-          <option value="es">🌐 ES</option>
-          <option value="pt">🌐 PT</option>
+          <option value="en">EN</option>
+          <option value="es">ES</option>
+          <option value="pt">PT</option>
         </select>
         <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">☾</button>
       </div>
