--- a/index.html
+++ b/index.html
@@ -239,21 +239,17 @@
       </ul>
     </nav>
 
-    <footer> 
-      <a class="btn" href="https://buymeacoffee.com/Contumance"
-   target="_blank" rel="noopener noreferrer"
-   data-i18n="buyme_aria"
-   data-i18n-attr="aria-label,title"
-   aria-label="Support this library on Buy Me a Coffee">
+    <footer>
+      <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer"
+         aria-label="Support this library on Buy Me a Coffee">
         <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
           <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
           <path d="M3 8h17"/>
           <path d="M7 4h6"/>
         </svg>
-        <span data-i18n="buyme">Buy me a coffee</span>
+        <span>Buy me a coffee</span>
       </a>
-
-      <span class="note" data-i18n="footer_note">Fuel the craft. Inspire the next page.</span>
+      <span class="note">Fuel the craft. Inspire the next page.</span>
       <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
     </footer>
   </main>
