--- a/index.html
+++ b/index.html
@@ -242,8 +242,6 @@
     <footer>
       <a class="btn" href="https://buymeacoffee.com/Contumance" 
         target="_blank" rel="noopener noreferrer"
-        data-i18n="buyme_aria"
-        data-i18n-attr="aria-label"
          aria-label="Support this library on Buy Me a Coffee">
         
         <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -251,7 +249,7 @@
           <path d="M3 8h17"/>
           <path d="M7 4h6"/>
         </svg>
-        <span>Buy me a coffee</span>
+        <span data-i18n="buyme">Buy me a coffee</span>
       </a>
       <span class="note">Fuel the craft. Inspire the next page.</span>
       <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
