--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </svg>
         <span data-i18n="buyme">Buy me a coffee</span>
       </a>
-      <span class="note">Fuel the craft. Inspire the next page.</span>
+      <span data-i18n="footer_note" class="note">Fuel the craft. Inspire the next page.</span>
       <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
     </footer>
   </main>
