--- a/index.html
+++ b/index.html
@@ -291,23 +291,23 @@
       es: {
         doc_title: "Re:sonance — Una selección silenciosa para manos curiosas.",
         doc_description: "Re:sonance — Una biblioteca experimental de sonido, color y movimiento sutil. Senderos de vibración que despiertan nuevas formas de escuchar.",
-        tagline: "Una selección silenciosa para manos curiosas.",
+        tagline: "Una sutil selección para manos curiosas.",
         collection: "Colección",
         app_scales_title: "The Scales Book",
-        app_scales_meta: "Caminos que guían la mano hacia colores invisibles.",
+        app_scales_meta: "Caminos que guían la mano hacia nuevos colores.",
         app_chords_title: "The Chords Book",
         app_chords_meta: "Formas de resonancia a lo largo de las cuerdas.",
         app_daily_title: "The Daily Chord",
-        app_daily_meta: "Cada día, un acorde — visto de nuevo, para despertar inspiración.",
+        app_daily_meta: "Cada día, un acorde, para despertar inspiración.",
         app_bounce_title: "The Bounce Garden",
-        app_bounce_meta: "Donde las colisiones cantan — órbitas melódicas y ecos rítmicos dentro de un círculo.",
+        app_bounce_meta: "Donde las colisiones resuenan — órbitas melódicas y ecos rítmicos dentro de un círculo.",
         app_modal_title: "The Modal Architect",
         app_modal_meta: "Diseña estructuras armónicas desde la geometría de las escalas.",
         app_poly_title: "The Polyrhythm Forge",
-        app_poly_meta: "Anillos concéntricos para polirritmos y polímetros — grooves tipo Mesh, acentos euclídeos, swing y paneo.",
+        app_poly_meta: "Anillos concéntricos para polirritmos y polímetros — grooves, acentos euclídeos, swing y paneo.",
         buyme: "Invítame un café",
         buyme_aria: "Apoya esta biblioteca en Buy Me a Coffee",
-        footer_note: "Alimenta el oficio. Inspira la próxima página.",
+        footer_note: "Alimenta la creación. Inspira la próxima página.",
         lang_label: "Idioma",
         theme_to_light: "Cambiar a modo claro",
         theme_to_dark: "Cambiar a modo oscuro"
