--- a/index.html
+++ b/index.html
@@ -6,47 +6,15 @@
   <title data-i18n="doc_title">Re:sonance — A quiet selection for curious hands.</title>
   <meta name="description" content="Re:sonance — An experimental library of sound, color, and quiet motion. Paths of vibration that awaken new forms of listening." data-i18n-attr="content" data-i18n="doc_description" />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>☰</text></svg>">
+  <link rel="stylesheet" href="assets/kindle.css">
   <style>
-    :root{
-      --paper:#f5f1e8; --ink:#2f2a1e; --muted:#6b6253; --link:#2d5842;
-      --link-visited:#514f7a; --accent:#a08a63; --maxw:42rem; --lh:1.6; --fs-base:18px;
-      --btn-bg: transparent; --btn-ink: var(--ink); --btn-border: var(--accent);
-      --btn-bg-hover: color-mix(in oklab, var(--accent) 14%, transparent);
-      --btn-shadow: 0 1px 0 rgba(0,0,0,.06);
-    }
-    html.theme-dark{
-      --paper:#0e0f0e; --ink:#dbd6c9; --muted:#9b9689; --link:#a9d0b8;
-      --link-visited:#c0b8e0; --accent:#242523;
-      --btn-bg: transparent; --btn-ink: var(--ink); --btn-border: var(--accent);
-      --btn-bg-hover: color-mix(in oklab, var(--accent) 25%, transparent);
-      --btn-shadow: 0 1px 0 rgba(0,0,0,.3);
-    }
-    html{font-size:var(--fs-base)}
-    body{
-      margin:0; color:var(--ink); background:var(--paper);
-      font-family:ui-serif, Georgia, "Iowan Old Style","Palatino Linotype", Palatino, serif;
-      line-height:var(--lh); text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased;
-    }
-    body::before{
-      content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
-      background-image:
-        radial-gradient(circle at 25% 15%, #000 .5px, transparent .5px),
-        radial-gradient(circle at 75% 85%, #000 .5px, transparent .5px);
-      background-size:3px 3px, 3px 3px; mix-blend-mode:multiply;
-    }
-    main{max-width:var(--maxw); margin:0 auto; padding:9vh 1.25rem 4rem}
+    main{padding:9vh 1.25rem 4rem}
 
     header.header{display:flex; align-items:flex-start; justify-content:space-between; gap:1rem}
     header h1{font-weight:600; margin:0 0 .25rem 0; font-size:clamp(1.8rem,4vw,2.4rem); letter-spacing:.2px}
     header p.desc{margin:0 0 2rem 0; color:var(--muted); font-style:italic}
 
     .controls{display:flex; gap:.5rem; align-items:center}
-
-    .theme-toggle{
-      border:1px solid var(--accent); background:transparent; color:var(--ink);
-      border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.05rem; line-height:1
-    }
-    .theme-toggle:focus-visible{outline:2px dashed var(--accent); outline-offset:2px}
 
     .lang-select{
       border:1px solid var(--accent); background:var(--btn-bg); color:var(--ink);
@@ -56,8 +24,6 @@
     }
     .lang-select:focus-visible{outline:2px dashed var(--accent); outline-offset:2px}
 
-    hr{border:none; border-top:1px solid var(--accent); margin:1.5rem 0; opacity:.5}
-
     nav h2{
       font-size:1rem; font-weight:600; text-transform:uppercase; color:var(--muted);
       margin:0 0 .5rem 0; letter-spacing:.08em
@@ -65,9 +31,6 @@
     ul.index{list-style:none; padding:0; margin:0}
     ul.index li{padding:0}
     ul.index li+li{border-top:1px dotted var(--accent)}
-
-    a{color:var(--link); text-decoration:none; text-underline-offset:2px}
-    a:visited{color:var(--link-visited)}
 
     .item{
       display:grid;
@@ -85,43 +48,9 @@
     .title{grid-area:title; line-height:1.25}
     .meta{grid-area:meta; color:var(--muted); font-size:.95rem; margin-top:.1rem}
 
-    footer{
-      display:flex; flex-direction:column; align-items:center; gap:.25rem;
-      font-size:.9rem; opacity:.9; padding:1.5rem 0;
-    }
-    footer .btn{
-      display:inline-flex; align-items:center; gap:.5rem; text-decoration:none;
-      border:1px solid var(--accent); border-radius:999px; padding:.45rem .95rem;
-      font-size:.9rem; font-weight:500;
-      transition:background-color .25s ease, color .25s ease, transform .1s ease, filter .2s ease;
-    }
-    html:not(.theme-dark) footer .btn{
-      background:color-mix(in oklab, var(--accent) 10%, var(--paper) 90%); color:var(--ink);
-    }
-    html:not(.theme-dark) footer .btn:hover{
-      background:color-mix(in oklab, var(--accent) 20%, var(--paper) 80%);
-    }
-    html.theme-dark footer .btn{
-      background:color-mix(in oklab, var(--accent) 40%, var(--ink) 60%); color:var(--paper);
-    }
-    html.theme-dark footer .btn:hover{
-      background:color-mix(in oklab, var(--accent) 55%, var(--ink) 45%);
-    }
-    footer .btn .btn-icon{width:1.2rem; height:1.2rem; stroke:currentColor;}
-    footer .note{font-size:.85rem;color:var(--muted)}
-    footer .byline{font-size:.75rem;opacity:.7}
-    footer .byline em{font-style:italic;letter-spacing:.02em}
-
     @media (prefers-reduced-motion:no-preference){
-      a{position:relative; background-image:linear-gradient(currentColor, currentColor);
-        background-position:0 100%; background-repeat:no-repeat; background-size:0% 1px;
-        transition:background-size .25s ease, color .2s ease, background-color .2s ease, transform .08s ease}
-      a:hover, a:focus-visible{background-size:100% 1px; outline:none}
       ul.index li{transition:transform .12s ease}
       ul.index li:hover{transform:translateX(2px)}
-      .btn{transition:background-color .2s ease, transform .06s ease}
-      .btn:hover{transform:translateY(-1px)}
-      .btn:active{transform:translateY(0)}
     }
   </style>
 </head>
