--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -7,52 +7,10 @@
   <meta name="description" content="The Scales Book — minimal interactive fretboard with e-ink-style aesthetics." />
   <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
+  <link rel="stylesheet" href="assets/kindle.css">
   <style>
-    :root{
-      --paper:#f5f1e8; --ink:#2f2a1e; --muted:#6b6253;
-      --link:#2d5842; --link-visited:#514f7a;
-      --accent:#a08a63; --rule:#d8d2c2; --accent-soft:#999;
-      --maxw:42rem; --radius:14px; --lh:1.6; --fs-base:18px;
-      --hit:#d9c8a6;
-    }
-    html.theme-dark{
-      --paper:#10110f; --ink:#dbd6c9; --muted:#a39c8c;
-      --link:#a9d0b8; --link-visited:#c0b8e0;
-      --accent:#2a2b27; --rule:#2a2b27; --accent-soft:#7f7a6b;
-      --hit:#2a2a22;
-    }
-    html{font-size:var(--fs-base)}
-    body{
-      margin:0; padding:0; color:var(--ink); background:var(--paper);
-      font-family:ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif;
-      line-height:var(--lh); text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased;
-    }
-    body::before{
-      content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
-      background-image:
-        radial-gradient(circle at 25% 15%, #000 0.5px, transparent 0.5px),
-        radial-gradient(circle at 75% 85%, #000 0.5px, transparent 0.5px);
-      background-size:3px 3px, 3px 3px; mix-blend-mode:multiply;
-    }
-    main{max-width:var(--maxw); margin:0 auto; padding:7vh 1.25rem 4rem;}
-    .topbar{display:flex; align-items:center; justify-content:space-between; gap:1rem; margin-bottom:1rem;}
-    nav.breadcrumb{font-size:.95rem}
-    nav.breadcrumb a{color:var(--link); text-decoration:none; text-underline-offset:2px;}
-    h1{margin:.2rem 0 .3rem 0; font-weight:600; font-size:clamp(1.6rem,4vw,2.2rem);}
-    .subtitle{color:var(--muted); font-size:.95rem; margin-bottom:.8rem;}
-    .theme-toggle{
-      border:1px solid var(--accent); background:transparent; color:var(--ink);
-      border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.15rem; line-height:1;
-    }
-    .theme-toggle:focus-visible{outline:2px dashed var(--accent); outline-offset:2px;}
-    hr{border:none; border-top:1px solid var(--accent); margin:1.25rem 0; opacity:.5;}
-    details.panel{border:1px solid var(--accent); border-radius:.6rem; background:rgba(255,255,255,.6);}
-    html.theme-dark details.panel{background:rgba(0,0,0,.1);}
-    details.panel>summary{cursor:pointer; list-style:none; padding:.6rem .8rem; font-size:.95rem; font-weight:600; color:var(--ink);}
-    details.panel>summary::-webkit-details-marker{display:none;}
-    details.panel>summary::after { content: "▾"; float: right; transition: transform .2s ease; }
-    details.panel[open]>summary::after { transform: rotate(180deg); }
-    details.panel .panel-body{padding:.6rem .8rem .9rem;}
+    .theme-toggle{font-size:1.15rem}
+
     .controls{display:grid; gap:8px; align-items:center; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); margin-bottom:8px;}
     .row{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
     label{font-size:12px; opacity:.9;}
@@ -67,16 +25,7 @@
     .piano-wrap{border:1px solid var(--accent); border-radius:.6rem; background:transparent; margin:14px 0 18px; padding:10px 10px 14px;}
     .piano-head{display:flex; justify-content:space-between; align-items:baseline; gap:10px; margin-bottom:6px; font-size:.95rem;}
     .piano-caption{color:var(--muted); font-size:.85rem;}
-    .support-note{display:none; border:1px solid var(--accent); border-radius:.6rem; padding:.8rem .9rem; margin:12px 0 16px; font-size:.95rem;
-      background: color-mix(in oklab, var(--paper) 88%, var(--accent) 12%); color: var(--ink);}
-    html.theme-dark .support-note{background: color-mix(in oklab, var(--ink) 70%, var(--accent) 30%); color: var(--paper);}
-    .support-note .actions{display:flex; gap:.5rem; flex-wrap:wrap; align-items:center; margin-top:.45rem;}
-    .support-note .btn{display:inline-flex; align-items:center; gap:.45rem; text-decoration:none; border:1px solid var(--accent); border-radius:999px; padding:.4rem .85rem; font-weight:600; transition:transform .08s ease, background-color .2s ease, color .2s ease;}
-    .support-note .btn:active{ transform:scale(.98); }
-    .support-note .btn svg{ width:1.05rem; height:1.05rem; stroke:currentColor; }
-    html:not(.theme-dark) .support-note .btn{ background: color-mix(in oklab, var(--paper) 85%, var(--accent) 15%); color: var(--ink); }
-    html.theme-dark .support-note .btn{ background: color-mix(in oklab, var(--ink) 55%, var(--accent) 45%); color: var(--paper); }
-    .support-note .dismiss{appearance:none; background:none; border:none; padding:.25rem .4rem; cursor:pointer; color:inherit; opacity:.75; text-decoration:underline; text-underline-offset:2px; font-size:.9rem;}
+    .support-note{margin:12px 0 16px;}
     .fretboard{width:100%; border:1px solid var(--accent); border-radius:.6rem; background:transparent;}
     .board{display:grid; grid-auto-rows:minmax(30px,5vh); grid-template-columns:40px repeat(24,1fr); position:relative; width:100%;}
     .string{display:contents;}
@@ -95,21 +44,6 @@
     .pos-marker.double{display:grid; grid-template-columns:1fr 1fr; gap:8px; width:auto; height:auto; background:transparent;}
     .pos-marker.double i{width:6px; height:6px; background:#bbb; opacity:.5; border-radius:999px; display:block;}
     .footer{margin:30px 0 60px; font-size:12px; color:var(--muted);}
-    @media (prefers-reduced-motion:no-preference){
-      a{position:relative; background-image:linear-gradient(currentColor,currentColor); background-position:0 100%;
-        background-repeat:no-repeat; background-size:0% 1px; transition:background-size .25s ease, color .2s ease;}
-      a:hover, a:focus-visible{background-size:100% 1px; outline:none;}
-    }
-    footer{display:flex; flex-direction:column; align-items:center; gap:.25rem; font-size:.9rem; opacity:.9; padding:1.5rem 0;}
-    footer .btn{display:inline-flex; align-items:center; gap:.5rem; text-decoration:none; border:1px solid var(--accent); border-radius:999px; padding:.45rem .95rem; font-size:.9rem; font-weight:500; transition:background-color .25s ease, color .25s ease, transform .1s ease, filter .2s ease;}
-    html:not(.theme-dark) footer .btn{ background:color-mix(in oklab, var(--accent) 10%, var(--paper) 90%); color:var(--ink); }
-    html:not(.theme-dark) footer .btn:hover{ background:color-mix(in oklab, var(--accent) 20%, var(--paper) 80%); }
-    html.theme-dark footer .btn{ background:color-mix(in oklab, var(--accent) 40%, var(--ink) 60%); color:var(--paper); }
-    html.theme-dark footer .btn:hover{ background:color-mix(in oklab, var(--accent) 55%, var(--ink) 45%); }
-    footer .btn .btn-icon{ width:1.2rem; height:1.2rem; stroke:currentColor; }
-    footer .note{font-size:.85rem;color:var(--muted)}
-    footer .byline{font-size:.75rem;opacity:.7}
-    footer .byline em{font-style:italic;letter-spacing:.02em}
   </style>
 </head>
 <body>
