--- a/index.html
+++ b/index.html
@@ -185,14 +185,9 @@
     </footer>
   </main>
 
+  <script src="assets/i18n.js"></script>
   <script>
-  // --- I18N (primero) ---
-  (function(){
-    const LANG_KEY = 'resonance-lang';
-    const qs = new URLSearchParams(location.search);
-    const supported = ['en','es','pt'];
-
-    const messages = {
+    const indexMessages = {
       en: {
         doc_title: "Re:sonance — A quiet selection for curious hands.",
         doc_description: "Re:sonance — An experimental library of sound, color, and quiet motion. Paths of vibration that awaken new forms of listening.",
@@ -267,78 +262,12 @@
       }
     };
 
-    function tr(key, fallback){
-      const dict = messages[currentLang] || messages.en;
-      return (dict && dict[key]) || fallback || key;
-    }
-    window.tr = tr;
-
-    function detectInitial(){
-      const fromQuery = (qs.get('lang')||'').toLowerCase();
-      if(supported.includes(fromQuery)) return fromQuery;
-      const saved = localStorage.getItem(LANG_KEY);
-      if(supported.includes(saved)) return saved;
-      const nav = (navigator.languages && navigator.languages[0]) || navigator.language || 'en';
-      const base = (nav||'en').slice(0,2).toLowerCase();
-      return supported.includes(base)? base : 'en';
-    }
-
-    function applyI18n(){
-      document.querySelectorAll('[data-i18n]').forEach(el=>{
-        const key = el.getAttribute('data-i18n');
-        if(key) el.textContent = tr(key, el.textContent);
-      });
-
-      document.querySelectorAll('[data-i18n-attr]').forEach(el=>{
-        const keys = el.getAttribute('data-i18n-attr').split(',').map(s=>s.trim());
-        const key = el.getAttribute('data-i18n'); // ahora sí debe existir
-        const val = tr(key, el.getAttribute(keys[0]));
-        keys.forEach(attr=> el.setAttribute(attr, val));
-      });
-
-      document.title = tr('doc_title', document.title);
-      const metaDesc = document.querySelector('meta[name="description"]');
-      if (metaDesc) metaDesc.setAttribute('content', tr('doc_description', metaDesc.getAttribute('content')));
-
-      const langLabel = tr('lang_label','Language');
-      const langSelect = document.getElementById('langSelect');
-      if (langSelect){
-        langSelect.setAttribute('aria-label', langLabel);
-        langSelect.setAttribute('title', langLabel);
-      }
-
-      document.documentElement.setAttribute('lang', currentLang);
-      document.documentElement.setAttribute('dir', 'ltr');
-    }
-
-    let currentLang = detectInitial();
-    const select = document.getElementById('langSelect');
-    if(select){ select.value = currentLang; }
-
-    applyI18n();
-
-    if(select){
-      select.addEventListener('change', (e)=>{
-        currentLang = e.target.value;
-        localStorage.setItem(LANG_KEY, currentLang);
-        applyI18n();
-        const url = new URL(location.href);
-        url.searchParams.set('lang', currentLang);
-        window.history.replaceState({}, '', url);
-      });
-    }
-
-    window.ReI18n = {
-      get: ()=>currentLang,
-      set: (lang)=>{
-        if(!supported.includes(lang)) return;
-        if(select){ select.value = lang; }
-        currentLang = lang; localStorage.setItem(LANG_KEY, lang); applyI18n();
-      },
-      t: tr,
-      supported
-    };
-  })();
+    window.tr = (key, fallback) => (window.ReI18n ? ReI18n.t(key, fallback) : (fallback || key));
+    ReI18n.init({
+      messages: indexMessages,
+      select: document.getElementById('langSelect')
+    });
+  </script>
 
   // --- THEME TOGGLE (después de i18n + con safeTr) ---
   (function(){
@@ -374,6 +303,9 @@
         localStorage.setItem(KEY,current);
         applyTheme(current);
       });
+    }
+    if(window.ReI18n){
+      ReI18n.onChange(()=>{ setIcon(current); });
     }
     const y=document.getElementById('y');
     if(y) y.textContent = new Date().getFullYear();
