Align language indicator font with site typography

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     .lang-select{
       border:1px solid var(--accent); background:var(--btn-bg); color:var(--ink);
       border-radius:.45rem; padding:.3rem .5rem; font-size:.95rem; line-height:1;
+      font-family:inherit;
       appearance:none; cursor:pointer;
       background-image: linear-gradient(transparent,transparent), linear-gradient(transparent,transparent);
     }
