Add intro blurb to index page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     .controls{display:flex; gap:.5rem; align-items:center}
 
+    section.intro{margin:1.5rem 0 2.5rem 0}
+    section.intro p{margin:0; font-size:1.05rem; line-height:1.65}
+
     .lang-select{
       border:1px solid var(--accent); background:var(--btn-bg); color:var(--ink);
       border-radius:.45rem; padding:.3rem .5rem; font-size:.95rem; line-height:1;
@@ -74,6 +77,10 @@
     </header>
 
     <hr>
+
+    <section class="intro">
+      <p data-i18n="intro_blurb">Re:sonance is a growing collection of playful musical tools, crafted to spark fresh listening rituals and shared explorations.</p>
+    </section>
 
     <nav aria-label="Library">
       <h2 data-i18n="collection">Collection</h2>
@@ -193,6 +200,7 @@
         doc_title: "Re:sonance — A quiet selection for curious hands.",
         doc_description: "Re:sonance — An experimental library of sound, color, and quiet motion. Paths of vibration that awaken new forms of listening.",
         tagline: "A quiet selection for curious hands.",
+        intro_blurb: "Re:sonance is a growing collection of playful musical tools, crafted to spark fresh listening rituals and shared explorations.",
         collection: "Collection",
         app_scales_title: "The Scales Book",
         app_scales_meta: "Paths that guide the hand toward unseen colors.",
@@ -217,6 +225,7 @@
         doc_title: "Re:sonance — Una selección silenciosa para manos curiosas.",
         doc_description: "Re:sonance — Una biblioteca experimental de sonido, color y movimiento sutil. Senderos de vibración que despiertan nuevas formas de escuchar.",
         tagline: "Una sutil selección para manos curiosas.",
+        intro_blurb: "Re:sonance es una colección en crecimiento de herramientas musicales lúdicas, creada para encender nuevos rituales de escucha y exploraciones compartidas.",
         collection: "Colección",
         app_scales_title: "The Scales Book",
         app_scales_meta: "Caminos que guían la mano hacia nuevos colores.",
@@ -241,6 +250,7 @@
         doc_title: "Re:sonance — Uma seleção silenciosa para mãos curiosas.",
         doc_description: "Re:sonance — Uma biblioteca experimental de som, cor e movimento sutil. Caminhos de vibração que despertam novas formas de escutar.",
         tagline: "Uma seleção silenciosa para mãos curiosas.",
+        intro_blurb: "Re:sonance é uma coleção crescente de ferramentas musicais lúdicas, criada para acender novos rituais de escuta e explorações compartilhadas.",
         collection: "Coleção",
         app_scales_title: "The Scales Book",
         app_scales_meta: "Caminhos que guiam a mão a cores invisíveis.",
