--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -59,7 +59,7 @@
           <option value="es">ES</option>
           <option value="pt">PT</option>
         </select>
-        <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">🌓</button>
+        <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">☾</button>
       </div>
     </div>
 
@@ -338,7 +338,7 @@
       const safeTr=(k,f)=> (window.ReI18n ? ReI18n.t(k,f) : (f||k));
       function setIcon(mode){
         if(!btn) return;
-        btn.textContent = '◑';
+        btn.textContent = mode==='dark' ? '☀︎' : '☾';
         const label = mode==='dark'
           ? safeTr('theme_to_light', 'Switch to light mode')
           : safeTr('theme_to_dark', 'Switch to dark mode');
