Fix piano section localization handling

--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -120,7 +120,7 @@
       </div>
     </section>
 
-    <section class="piano-wrap" aria-label="Piano octave" data-i18n="scales_piano_region" data-i18n-attr="aria-label">
+    <section class="piano-wrap" aria-label="Piano octave" data-i18n="scales_piano_region" data-i18n-attr="aria-label" data-i18n-attr-only>
       <div class="piano-head">
         <div><strong data-i18n="scales_piano_word">Piano</strong> <span data-i18n="scales_piano_one_octave">— one octave</span></div>
         <div class="piano-caption" id="pianoCaption">C Major (Ionian)</div>
