--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -204,15 +204,18 @@
         <div class="controls" role="group" aria-label="Controls" data-i18n="chords_controls_aria" data-i18n-attr="aria-label">
           <div class="row">
             <label for="root" data-i18n="chords_control_root">Root</label>
-            <select id="root" aria-label="Root" data-i18n="chords_control_root" data-i18n-attr="aria-label"></select>
+            <select id="root" aria-label="Root" data-i18n="chords_control_root" data-i18n-attr="aria-label"
+              data-i18n-attr-only></select>
           </div>
           <div class="row">
             <label for="chord" data-i18n="chords_control_chord">Chord</label>
-            <select id="chord" aria-label="Chord" data-i18n="chords_control_chord" data-i18n-attr="aria-label"></select>
+            <select id="chord" aria-label="Chord" data-i18n="chords_control_chord" data-i18n-attr="aria-label"
+              data-i18n-attr-only></select>
           </div>
           <div class="row">
             <label for="labels" data-i18n="chords_control_labels">Labels</label>
-            <select id="labels" aria-label="Labels" data-i18n="chords_control_labels" data-i18n-attr="aria-label">
+            <select id="labels" aria-label="Labels" data-i18n="chords_control_labels" data-i18n-attr="aria-label"
+              data-i18n-attr-only>
               <option value="degrees" selected data-i18n="chords_label_degrees">Degrees</option>
               <option value="notes" data-i18n="chords_label_notes">Notes</option>
               <option value="off" data-i18n="chords_label_off">Hidden</option>
